logs/fdj.log
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/alignak'...
Listing './etc/alignak/arbiter'...
Listing './etc/alignak/arbiter/daemons'...
Listing './etc/alignak/arbiter/modules'...
Listing './etc/alignak/arbiter/objects'...
Listing './etc/alignak/arbiter/objects/commands'...
Listing './etc/alignak/arbiter/objects/contactgroups'...
Listing './etc/alignak/arbiter/objects/contacts'...
Listing './etc/alignak/arbiter/objects/dependencies'...
Listing './etc/alignak/arbiter/objects/escalations'...
Listing './etc/alignak/arbiter/objects/hostgroups'...
Listing './etc/alignak/arbiter/objects/hosts'...
Listing './etc/alignak/arbiter/objects/notificationways'...
Listing './etc/alignak/arbiter/objects/realms'...
Listing './etc/alignak/arbiter/objects/servicegroups'...
Listing './etc/alignak/arbiter/objects/services'...
Listing './etc/alignak/arbiter/objects/timeperiods'...
Listing './etc/alignak/arbiter/packs'...
Listing './etc/alignak/arbiter/packs/linux-nrpe'...
Listing './etc/alignak/arbiter/packs/notifications'...
Listing './etc/alignak/arbiter/packs/resource.d'...
Listing './etc/alignak/arbiter/packs/snmp'...
Listing './etc/alignak/arbiter/packs/windows-nsca'...
Listing './etc/alignak/arbiter/resource.d'...
Listing './etc/alignak/arbiter/templates'...
Listing './etc/alignak/backend-json'...
Listing './etc/alignak/backend-json/fdj'...
Listing './etc/alignak/backend-json/notifications'...
Listing './etc/alignak/backend-json/windows-nsca'...
Listing './etc/alignak/certs'...
Listing './etc/alignak/daemons'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alignak_checks_windows_nsca'...
Listing './lib/python3.5/site-packages/alignak_checks_windows_nsca-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/alignak_notifications'...
Listing './lib/python3.5/site-packages/alignak_notifications-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/fdj-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './var'...
Listing './var/libexec'...
Listing './var/libexec/alignak'...
Compiling './var/libexec/alignak/notify_by_email.py'...
Compiling './var/libexec/alignak/notify_by_slack.py'...
Compiling './var/libexec/alignak/notify_by_xmpp.py'...
***   File "./var/libexec/alignak/notify_by_xmpp.py", line 50
    print "no config/auth file specified, can't continue"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

